- update default texture to fix a few spot here and there - rework animation. Now Agent will have their own living animation - implement timeframe handler for pose animation
- update path finding: now throttle at 10 tick before calling pathfind (may not help much in term of tps? but why not)

Finish structure: double barrel turret and portable dispenser. Work on by engieer
Apply structure animation

--- a/src/main/resources/assets/aegisops/lang/en_us.json
+++ b/src/main/resources/assets/aegisops/lang/en_us.json
@@ -8,9 +8,15 @@
   "item.aegisops.medic_spawn_egg": "Medic Spawn Egg",
   "item.aegisops.engineer_spawn_egg": "Engineer Spawn Egg",
   "item.aegisops.swordman_spawn_egg": "Swordman Spawn Egg",
+  "item.aegisops.port_disp": "Portable Dispenser",
+  "item.aegisops.db_turret": "Double Barrel Turret",
+  "item.aegisops.engi_hammer": "Engineering Hammer",
 
   "block.aegisops.drop_pod_block": "Drop Pod",
   "block.aegisops.drop_pod_block_used": "Drop Pod",
   "block.aegisops.beacon_block_unused": "Beacon",
-  "block.aegisops.beacon_block": "Beacon Core"
+  "block.aegisops.beacon_block": "Beacon Core",
+
+  "entity.aegisops.port_disp": "Portable Dispenser",
+  "entity.aegisops.db_turret": "Double Barrel Turret"
 }
