add medic goal redo attack goal: stop will not drop target. This allow special goal to trigger without loosing target add sniper goal
add 2 medic items

fix #1 cause by incorrect config value. Additional check added to trigger regenerate default config.
minor bug fix on attack goal. As I forgot to calcute the distance between target and user.

--- a/src/main/resources/assets/aegisops/lang/en_us.json
+++ b/src/main/resources/assets/aegisops/lang/en_us.json
@@ -11,6 +11,8 @@
   "item.aegisops.port_disp": "Portable Dispenser",
   "item.aegisops.db_turret": "Double Barrel Turret",
   "item.aegisops.engi_hammer": "Engineering Hammer",
+  "item.aegisops.bandage": "Bandage",
+  "item.aegisops.morphine": "Morphine Shot",
 
   "block.aegisops.drop_pod_block": "Drop Pod",
   "block.aegisops.drop_pod_block_used": "Drop Pod",
