New drop pod variance: Hell Pod   - one land, penetrate the ground, then lift the entity up  - Replace the default dropped. The default drop pod will be repurposed for something else later
New Item: Modular Shield

 - 600 durability

 - use for Heavy special

New special Skill: Heavy Shield Bash.
 - When equipped with a modular shield, Heavy performs shield bash:
phase 1: equip

phase 2: Charge toward the enemy until 3 3-block radius

phase 3: taunt: Target entity will target heavy, and all enemies within 8 8-block radius WITH a target redirect agro toward Heavy 

phase 4: Shield Bash: all enemy within 3 block radius in front get a knockback + 4 dmg

-- if heavy has no gun, recover and end

-- if heavy has a gun, try to shot target 3 time and end

Minor bug fix:
demolition config fix

--- a/src/main/resources/assets/aegisops/lang/en_us.json
+++ b/src/main/resources/assets/aegisops/lang/en_us.json
@@ -13,11 +13,15 @@
   "item.aegisops.engi_hammer": "Engineering Hammer",
   "item.aegisops.bandage": "Bandage",
   "item.aegisops.morphine": "Morphine Shot",
+  "item.aegisops.modular_shield": "Modular Shield",
 
   "block.aegisops.drop_pod_block": "Drop Pod",
   "block.aegisops.drop_pod_block_used": "Drop Pod",
   "block.aegisops.beacon_block_unused": "Beacon",
   "block.aegisops.beacon_block": "Beacon Core",
+  "block.aegisops.hell_pod_block": "Hell Pod",
+  "block.aegisops.hell_pod_block_bot": "Hell Pod",
+  "block.aegisops.hell_pod_block_top": "Hell Pod",
 
   "entity.aegisops.port_disp": "Portable Dispenser",
   "entity.aegisops.db_turret": "Double Barrel Turret"
