ML infastructure fix a few bug here and there (couple layer has bug) complete chip screen UI and entire func linking complete thread setup: 1 inf, 1 train finish lib integration, now Chip Item contain both model and data
and a shit ton of thing that I forget...

--- a/src/main/resources/assets/aegisops/lang/en_us.json
+++ b/src/main/resources/assets/aegisops/lang/en_us.json
@@ -16,6 +16,7 @@
   "item.aegisops.modular_shield": "Modular Shield",
   "item.aegisops.grenade": "Grenade",
   "item.aegisops.vp_terminal": "Vector Pursuer Terminal",
+  "item.aegisops.brain_chip": "Brain Chip",
 
   "block.aegisops.drop_pod_block": "Drop Pod",
   "block.aegisops.drop_pod_block_used": "Drop Pod",
